RESOLVED FIXED 191357
[WK1] Tests for smooth scrolling of a window fail
https://bugs.webkit.org/show_bug.cgi?id=191357
Summary [WK1] Tests for smooth scrolling of a window fail
Frédéric Wang (:fredw)
Reported 2018-11-07 04:24:05 PST
Smooth scroll behavior seems to somewhat work with the patch for bug 188043, but the tests still have some issues on WK1 (especially the one scrolling a window). imported/w3c/web-platform-tests/css/cssom-view/scroll-behavior-element.html imported/w3c/web-platform-tests/css/cssom-view/scroll-behavior-main-frame-root.html imported/w3c/web-platform-tests/css/cssom-view/scroll-behavior-main-frame-window.html imported/w3c/web-platform-tests/css/cssom-view/scroll-behavior-smooth-positions.html imported/w3c/web-platform-tests/css/cssom-view/scroll-behavior-subframe-root.html imported/w3c/web-platform-tests/css/cssom-view/scroll-behavior-subframe-window.html
Attachments
Patch (6.56 KB, patch)
2021-10-12 21:23 PDT, Simon Fraser (smfr)
no flags
Frédéric Wang (:fredw)
Comment 1 2018-11-09 01:28:45 PST
(In reply to Frédéric Wang (:fredw) from comment #0) > Smooth scroll behavior seems to somewhat work with the patch for bug 188043, > but the tests still have some issues on WK1 (especially the one scrolling a > window). One of the issue of the case "Aborting smooth scrolling with instant scrolling" that also happened on WK1 because I had forgotten to modify one function. So actually, the 4 failing tests are all related to scrolling a window, which I guess is somewhat different on WK1: imported/w3c/web-platform-tests/css/cssom-view/scroll-behavior-main-frame-root.html imported/w3c/web-platform-tests/css/cssom-view/scroll-behavior-main-frame-window.html imported/w3c/web-platform-tests/css/cssom-view/scroll-behavior-subframe-root.html imported/w3c/web-platform-tests/css/cssom-view/scroll-behavior-subframe-window.html
Simon Fraser (smfr)
Comment 2 2021-10-12 21:13:37 PDT
*** Bug 231627 has been marked as a duplicate of this bug. ***
Simon Fraser (smfr)
Comment 3 2021-10-12 21:23:25 PDT
EWS
Comment 4 2021-10-13 09:54:27 PDT
Committed r284097 (242925@main): <https://commits.webkit.org/242925@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 441037 [details].
Radar WebKit Bug Importer
Comment 5 2021-10-13 09:55:18 PDT
Note You need to log in before you can comment on or make changes to this bug.