[WK1] Tests for smooth scrolling of a window fail https://bugs.webkit.org/show_bug.cgi?id=191357

Reviewed by Sam Weinig.
Source/WebCore:

The scrolling functions around ScrollView are a maze of twisty passages, with no clear
bottleneck functions, and aliasing of scroll position between ScrollableArea, ScrollAnimator
and the platform widget in WK1.

Fallout from this was that animation-driven scrolling, which ends up in
ScrollView::scrollTo(), did nothing if there was a platform widget.

In addition, there was no feedback that updated ScrollAnimator's notion of scroll position
when the platform widget scrolled, causing repeated animated scrolls to fail.

Cleaning up the mess will take time; for now, just patch ScrollView::scrollTo() to do
something if there's a platform widget, and have ScrollView::scrollOffsetChangedViaPlatformWidget()
push the new position to the scroll animator.

Tested by tests in imported/w3c/web-platform-tests/css/cssom-view/

* platform/ScrollView.cpp:
(WebCore::ScrollView::scrollOffsetChangedViaPlatformWidget):
(WebCore::ScrollView::scrollTo):
(WebCore::ScrollView::setScrollPosition):
* platform/ScrollableArea.cpp:
(WebCore::ScrollableArea::scrollPositionChanged): Just some auto.

LayoutTests:

Some cssom-view tests pass now in WK1.

* platform/mac-wk1/TestExpectations:


Canonical link: https://commits.webkit.org/242925@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284097 268f45cc-cd09-0410-ab3c-d52691b4dbfc